--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,6 @@ body {
 }
 .btn {
   background-color: var(--button-color);
-
   color: var(--primary-white-color);
   cursor: pointer;
   font-family: "Roboto", sans-serif;
@@ -88,6 +87,12 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border-color: transparent;
+width: 169px;
+height: 56px;
+
 }
 
 .btn:hover,
@@ -162,11 +167,25 @@ body {
   color: var(--button-color);
   background-color: #f4f4fd;
   cursor: pointer;
+  border: 1px solid #E7E9FC;
+  border-radius: 4px;
 }
 .ptf-btn:hover,
 .ptf-btn:focus {
   background-color: var(--acsent-color);
   color: var(--primary-white-color);
+}
+
+.conteiner{
+  display: flex;
+}
+
+.items{
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 24px;
 }
 
 .portfolio-link {
