--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,8 @@ img {
 
 .container {
   width: 1158px;
-  padding: 0, 15px;
+  padding-left:15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
