--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ ul {
 img {
   display: block;
 }
+button {
+  display: block;
+  cursor: pointer;
+}
 
 .list {
   list-style: none;
@@ -55,7 +59,7 @@ img {
 
 .container {
   width: 1158px;
-  padding-left:15px;
+  padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
@@ -142,9 +146,10 @@ img {
 /* Hero */
 .hero {
   background-color: var(--titel-text-color);
-  text-align: center;
   margin-bottom: 120px;
-  height: 600px;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  
 }
 
 .hero-titel {
@@ -154,9 +159,10 @@ img {
   text-align: center;
   color: #ffffff;
   letter-spacing: 0.02em;
-
+  max-width: 496px;
   margin-bottom: 48px;
 }
+
 .btn {
   background-color: var(--button-color);
   color: var(--primary-white-color);
@@ -167,12 +173,10 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
 
-  cursor: pointer;
-
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  border-color: transparent;
-  width: 169px;
+  border: none;
+  min-width: 169px;
   height: 56px;
 }
 
@@ -182,6 +186,11 @@ img {
 }
 
 /* Advantages section */
+.advantages{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .titel {
   font-weight: 500;
   font-size: 20px;
@@ -200,6 +209,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--titel-text-color);
+  margin-bottom: 8px;
 }
 .list.text {
   line-height: 1.5;
@@ -209,11 +219,15 @@ img {
   display: flex;
   align-items: center;
   margin-bottom: 120px;
+  gap: 24px;
+  
 }
 
-.advantages-items.item:not(:first-child) {
-  margin-left: 24px;
+.advantages-items{
+
+  width: calc((100% - 72px) / 4);
 }
+
 /* Works-ex */
 
 .heading {
@@ -372,5 +386,5 @@ img {
   font-size: 16px;
   line-height: 1.5;
   color: #f4f4fd;
-  max-width: 264px
+  max-width: 264px;
 }
