--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ padding-bottom: 120px;
 .team-list-item {
   font-size: 16px;
   line-height: 1.5;
-
+  width: calc((100% - 72px) / 4);
   background-color: var(--primary-white-color);
 }
 
